SERVER-62216 When abortTenantIndexBuilds failed to abort during a tenant migration